--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "simplealgo",
   "version": "0.1.0",
   "private": true,
+  "main": "lib/index.js",
+  "author": "iamswain25",
+  "description": "Minimal React component of simple Algo creating, signing and sending payment transaction",
+  "license": "ISC",
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.0",
+    "algosdk": "^1.3.1",
+    "baseui": "^9.6.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
+    "styletron-engine-atomic": "^1.4.1",
+    "styletron-react": "^5.2.1",
     "typescript": "3.6.3"
   },
   "scripts": {
