--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "baseui": "^9.6.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-json-to-table": "^0.1.5",
     "react-scripts": "3.1.2",
     "styletron-engine-atomic": "^1.4.1",
     "styletron-react": "^5.2.1",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "rollup -c"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "rollup": "^1.23.1",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "tsc": "^1.20150623.0"
   }
 }
