--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "simplealgo",
-  "version": "0.1.0",
-  "private": true,
-  "main": "lib/index.js",
+  "version": "0.1.2",
+  "main": "lib",
+  "types": "index.d.ts",
   "author": "iamswain25",
   "description": "Minimal React component of simple Algo creating, signing and sending payment transaction",
   "license": "ISC",
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile": "rollup -c"
+    "compile": "rollup -c && tsc"
   },
   "eslintConfig": {
     "extends": "react-app"
