--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "lib",
   "types": "index.d.ts",
   "author": "iamswain25",
+  "homepage" : "http://iamswain25.github.io/simplealgo",
   "description": "Minimal React component of simple Algo creating, signing and sending payment transaction",
   "license": "ISC",
   "dependencies": {
@@ -29,7 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile": "rollup -c && tsc"
+    "compile": "rollup -c && tsc",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "rollup": "^1.23.1",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.3",
