--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "removeComments": true,
-    "declaration": true,
     "sourceMap": true,
     "target": "esnext",
     "lib": [
@@ -12,7 +11,6 @@
       "dom.iterable",
       "esnext"
     ],
-    // "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -23,7 +21,8 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react",
-    // "isolatedModules": true
+    "allowJs": true,
+    "isolatedModules": true
   },
   "include": [
     "src"
